Corrige identificação do funcionário mais velho